--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <!-- Description de la page -->
 
@@ -20,7 +20,7 @@
         <header>
             <div class="top">
                 <div id="logo">
-                    <img src="img/logo/Reservia@3x.png"height="40" width="70" alt="Reservia" />
+                    <img src="img/logo/Reservia@3x.png "height="40" width="70" alt="Reservia" />
                 </div>
                 
                 <nav>
@@ -162,7 +162,7 @@
                         </div>
                     </a>
                 </div>
-                <h4>Afficher plus</h2>
+                <h4>Afficher plus</h4>
             </article>
 
             <!-- Section(1) article disposé sur le côté droit de l'article -->
