--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <meta name="description" content="Roughly 155 characters">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/styles.css">
-        <link href="https://fonts.google.com/specimen/Raleway#standard-styles">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap">
         <script src="https://kit.fontawesome.com/d6d0fa6156.js" crossorigin="anonymous"></script>
     </head>
 
@@ -20,7 +21,7 @@
         <header>
             <div class="top">
                 <div id="logo">
-                    <img src="img/logo/Reservia@3x.png "height="40" width="70" alt="Reservia" />
+                    <img src="img/logo/Reservia@3x.png"height="40"width="70"alt="Reservia" />
                 </div>
                 
                 <nav>
@@ -37,7 +38,7 @@
 
             <div class="search">
                 <div class="location"><i class="fas fa-map-marker-alt"> </i></div>
-                <input class="searchInput" value="Marseille,France" type="text">
+                <input class="searchInput" placeholder="Marseille,France" type="text">
                 <input type="submit" class="searchText" value="Rechercher">
                 <i id="search" class="fas fa-search"></i>
             </div>
