--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <div class="top">
                 <div id="logo">
-                    <img src="img/logo/Reservia@3x.png"height="40"width="70"alt="Reservia" />
+                    <img src="img/logo/Reservia@3x.png" height="40" width="70"><alt="Reservia" />
                 </div>
                 
                 <nav>
