--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
         <meta name="description" content="Roughly 155 characters">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/styles.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/d6d0fa6156.js" crossorigin="anonymous"></script>
     </head>
 
