--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+    <html lang="fr">
 
     <!-- Description de la page -->
 
     <head>
         <meta charset="utf-8" />
         <title>Reservia</title>
-        <meta name="description" content="Roughly 155 characters">
+        <meta name="description" content="Reservia">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -172,7 +172,7 @@
             <aside>
                 <div class="aside">
                     <div class="asideTitle">
-                        <h2>Les plus populaires</h2>
+                        <h2 id="the most popular">Les plus populaires</h2>
                         <div class="graph"><i class="fas fa-chart-line"> </i> </div>
                     </div>
                     <div class="asideLabel">
