--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <main class="main1">
             <article id="hebergements">
-                <h2>Hébergements à Marseille</h2>
+                <h2 id="accomodations">Hébergements à Marseille</h2>
                 <div class="articleLabel">
                     <a href="#">
                         <div class="insideLabel">
@@ -172,7 +172,7 @@
             <aside>
                 <div class="aside">
                     <div class="asideTitle">
-                        <h2 id="the most popular">Les plus populaires</h2>
+                        <h2 id="popular">Les plus populaires</h2>
                         <div class="graph"><i class="fas fa-chart-line"> </i> </div>
                     </div>
                     <div class="asideLabel">
