--- a/index.html
+++ b/index.html
@@ -72,6 +72,170 @@
                 <div class="logoInformation"><i class="fas fa-info"> </i></div>
                 <div class="infoText">Plus de 500 logements sont disponibles dans cette ville</div>
             </div>
+
+        <!-- Section(1) Article principal -->
+
+        <main class="main1">
+            <article id="hebergements">
+                <h2 id="accomodations">Hébergements à Marseille</h2>
+                <div class="articleLabel">
+                    <a href="#">
+                        <div class="insideLabel">
+                            <img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière"
+                                class="photo">
+                            <div class="title">Auberge la Cannebière</div>
+                            <div class="price">Nuit à partir de <strong>25 €</strong></div>
+                            <div class="stars">
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <div class="emptyStars"><i class="fas fa-star"> </i></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="insideLabel">
+                            <img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du Port" class="photo">
+                            <div class="title">Hôtel du Port</div>
+                            <div class="price">Nuit à partir de <strong>52 €</strong></div>
+                            <div class="stars">
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="insideLabel">
+                            <img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les Mouettes" class="photo">
+                            <div class="title">Hôtel Les Mouettes</div>
+                            <div class="price">Nuit à partir de <strong>76 €</strong></div>
+                            <div class="stars">
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <div class="emptyStars"><i class="fas fa-star"> </i></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="insideLabel">
+                            <img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" class="photo">
+                            <div class="title">Hôtel de la mer</div>
+                            <div class="price">Nuit à partir de <strong>46 €</strong></div>
+                            <div class="stars">
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <div class="emptyStars"><i class="fas fa-star"> </i></div>
+                                <div class="emptyStars"><i class="fas fa-star"> </i></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="insideLabel">
+                            <img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Hôtel Le Panier" class="photo">
+                            <div class="title">Hôtel Le Panier</div>
+                            <div class="price">Nuit à partir de <strong>23 €</strong></div>
+                            <div class="stars">
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <div class="emptyStars"><i class="fas fa-star"> </i></div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="insideLabel">
+                            <img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" class="photo">
+                            <div class="title">Hôtel chez Amina</div>
+                            <div class="price">Nuit à partir de <strong>95 €</strong></div>
+                            <div class="stars">
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                                <i class="fas fa-star"> </i>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <h4>Afficher plus</h4>
+            </article>
+
+            <aside>
+                <div class="aside">
+                    <div class="asideTitle">
+                        <h2 id="popular">Les plus populaires</h2>
+                        <div class="graph"><i class="fas fa-chart-line"> </i> </div>
+                    </div>
+                    <div class="asideLabel">
+                        <a href="#">
+                            <div class="asideInsideLabel">
+                                <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin"
+                                    class="asidePhoto">
+                                <div class="asideText">
+                                    <div class=asideInsideText>
+                                        <div class="title">Hôtel Le soleil du <br />matin</div>
+                                        <div class="price">Nuit à partir de <strong>128 €</strong></div>
+                                    </div>
+                                    <div class="stars">
+                                        <i class="fas fa-star"> </i>
+                                        <i class="fas fa-star"> </i>
+                                        <i class="fas fa-star"> </i>
+                                        <i class="fas fa-star"> </i>
+                                        <i class="fas fa-star"> </i>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="asideInsideLabel">
+                                <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                                    alt="Au coeur de l'eau Chambre d'hôtes" class="asidePhoto">
+                                <div class="asideText">
+                                    <div class=asideInsideText>
+                                        <div class="title">Au coeur de l'eau <br />Chambre d'hôtes</div>
+                                        <div class="price">Nuit à partir de <strong>71 €</strong></div>
+                                    </div>
+                                    <div class="stars">
+                                        <i class="fas fa-star"> </i>
+                                        <i class="fas fa-star"> </i>
+                                        <i class="fas fa-star"> </i>
+                                        <i class="fas fa-star"> </i>
+                                        <div class="emptyStars"><i class="fas fa-star"> </i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="asideInsideLabel">
+                                <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc"
+                                    class="asidePhoto">
+                                <div class="asideText">
+                                    <div class=asideInsidetext>
+                                        <div class="title">Hôtel Tout bleu et <br />Blanc</div>
+                                        <div class="price">Nuit à partir de <strong>68 €</strong></div>
+                                    </div>
+                                    <div class="stars">
+                                        <i class="fas fa-star"> </i>
+                                        <i class="fas fa-star"> </i>
+                                        <i class="fas fa-star"> </i>
+                                        <i class="fas fa-star"> </i>
+                                        <div class="emptyStars"><i class="fas fa-star"> </i></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </aside>
+        </main>
        
         
 
